# shooter

./: Makefile  README.md  main.py  pyproject.toml
core/: action.py  pyxel_ext.py  vector2.py
